# ai-meta

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  META.md  README.md  install.ps1  install.sh  meta
.claude/skills/meta-arch/: SKILL.md
.claude/skills/meta-build/: SKILL.md
.claude/skills/meta-check/: SKILL.md
.claude/skills/meta-ci/: SKILL.md
.claude/skills/meta-gen/: SKILL.md
.claude/skills/meta-milestone/: SKILL.md
.claude/skills/meta-setup/: SKILL.md
.claude/skills/meta-stats/: SKILL.md
.claude/skills/meta-status/: SKILL.md
.claude/skills/meta-tag/: SKILL.md
.claude/skills/meta-task/: SKILL.md
.claude/skills/meta-test/: SKILL.md
.claude/skills/meta-upgrade/: SKILL.md
.claude/skills/meta-wave/: SKILL.md
.github/workflows/: arch-review.yml  ci.yml  lockfile.yml  meta-check.yml  release.yml  tag-on-version.yml
.meta/: meta.toml
.meta/state/: arch  check
docs/: dependencies.md  releasing.md
docs/superpowers/plans/: 2026-07-13-windows-meta-launchers.md
docs/superpowers/specs/: 2026-07-12-meta-lifecycle-hooks-design.md  2026-07-13-windows-meta-launchers-design.md
src/: claudegen.rs  cli.rs  context.rs  detect.rs  error.rs  lib.rs  main.rs  output.rs  process.rs  scaffold.rs  state.rs  template.rs  version.rs
src/assets/: claude_managed.md  meta.md  shim.cmd  shim.ps1  shim.sh  skill.md
src/assets/workflows/: arch-review.yml  ci.yml  meta-check.yml
src/commands/: arch.rs  build.rs  check.rs  ci.rs  gen.rs  init.rs  milestone.rs  mod.rs  setup.rs  stats.rs  status.rs  tag.rs  task.rs  test.rs  upgrade.rs  wave.rs
src/config/: defaults.rs  migrate.rs  mod.rs  schema.rs
src/github/: auth.rs  mod.rs  projects.rs
src/profile/: mod.rs  python.rs  rust.rs  swift.rs  typescript.rs
src/rules/: coverage.rs  grep.rs  guards.rs  guards_test.rs  mod.rs  model.rs  nontest.rs  signals.rs
src/sync/: compat.rs  diff.rs  mod.rs
tests/: init_test.rs  stats_test.rs
