[package]
name = "ai-meta"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "The LLM's missing meta framework — one versioned CLI that scaffolds, lints, and syncs project tooling across repos."
license = "MIT"
repository = "https://github.com/tizz98/ai-meta"
default-run = "meta"

[[bin]]
name = "meta"
path = "src/main.rs"

[lib]
name = "ai_meta"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
walkdir = "2"
toml_edit = "0.22"
similar = "2"
octocrab = "0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = "thin"
