[package]
name = "ai-meta"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
description = "The LLM's missing meta framework — one versioned CLI that scaffolds, lints, and syncs project tooling across repos."
authors = ["Eli Wilson <5739698+tizz98@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tizz98/ai-meta"
repository = "https://github.com/tizz98/ai-meta"
documentation = "https://github.com/tizz98/ai-meta"
keywords = ["cli", "scaffold", "linter", "tooling", "framework"]
categories = ["command-line-utilities", "development-tools"]
default-run = "meta"

# Keep the published crate to the buildable binary: source, lockfile, README,
# and license. Repo-management artifacts (workflows, skills, the `./meta` shim,
# docs) aren't needed by `cargo install ai-meta`.
exclude = [
  ".github/",
  ".claude/",
  ".meta/",
  "docs/",
  "META.md",
  "install.sh",
  "meta",
  ".gitignore",
]

[[bin]]
name = "meta"
path = "src/main.rs"

[lib]
name = "ai_meta"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
walkdir = "2"
toml_edit = "0.22"
similar = "2"
octocrab = "0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = "thin"
